structural-typing/tests/ui/select_invalid_prefix_minus.rs
use structural_typing::structural;

#[structural]
struct User {
    name: String,
    email: String,
}

fn main() {
    type Invalid = user::select!(-email);
}
